plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	exclusiveContent {
		forRepository {
			maven {
				name = 'Modrinth'
				url = 'https://api.modrinth.com/maven'
			}
		}
		filter {
			includeGroup 'maven.modrinth'
		}
	}
}

// Loom's splitEnvironmentSourceSets() - what main and the 1.18+ ports use - cannot be used on 1.16.5.
// It switches Loom to its split client-only/common Minecraft jars, which only exist for versions
// that ship a bundled server jar (1.18+); on anything older Loom aborts setup with "Only Minecraft
// versions using a bundled server jar can be split". So the same two source sets are declared by
// hand on top of the merged jar, mirroring what Loom's split mode does internally: the layout
// (src/main/java, src/client/java) and the single-mod grouping are unchanged, the client set
// compiles against main and rides along in the jar, and runClient launches from it. The one thing
// lost is the compile-time guarantee that src/main never touches a client class - the merged jar
// has them all - so that rule is now kept by hand (see CLAUDE.md).
sourceSets {
	client {
		compileClasspath += sourceSets.main.compileClasspath + sourceSets.main.output
		runtimeClasspath += sourceSets.main.runtimeClasspath + sourceSets.main.output
	}
}

loom {
	mods {
		orelizards {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

	runs {
		client {
			source sourceSets.client
		}
	}
}

jar {
	from sourceSets.client.output
}

// GeckoLib 3.0.x cannot be remapped to Mojang mappings as shipped. GeoProjectilesRenderer declares
// both its own IGeoRenderer.getTextureLocation(Entity) and an override of
// EntityRenderer.getTextureLocation(Entity) (intermediary method_3931). Under Yarn those are two
// differently named methods; under Mojmap both want the name getTextureLocation with the same
// descriptor, which Tiny Remapper reports as an unfixable name conflict and Loom's dependency remap
// aborts on ("Failed to remap 48 mods"). Loom exposes no ignoreConflicts switch for dependency
// remapping, and the override is a one-line delegate to the other method - so this rewrites the
// Modrinth artifact with that single method removed. Once remapped, the surviving method *is* the
// override, and nothing else in the jar changes. It has to happen here, at configuration time,
// because Loom remaps mod dependencies while the project is being configured, so the patched file
// must already exist. GeckoLib 3.1+ renamed its method to getTextureResource, so only 3.0.x needs
// this. The upstream coordinate is still what gradle.properties declares - this only changes how
// the dev classpath copy is prepared, not what players install.
//
// The artifact is fetched by hand rather than through a Gradle configuration: resolving anything
// this early freezes every repository's descriptor, and Loom then fails with "Cannot mutate content
// repository descriptor 'LoomLocalRemappedMods' after repository has been used" when it tries to
// finish setting up its own. Gradle's module cache is checked first, then the Modrinth maven.
// Everything lands in .gradle/geckolib-mojmap/ (ignored by git); delete that directory to redo the
// patch, and bump the revision suffix if the patch itself changes.
class DropMethodVisitor extends org.objectweb.asm.ClassVisitor {
	private final String methodName
	private final String methodDescriptor

	DropMethodVisitor(org.objectweb.asm.ClassVisitor next, String methodName, String methodDescriptor) {
		super(org.objectweb.asm.Opcodes.ASM9, next)
		this.methodName = methodName
		this.methodDescriptor = methodDescriptor
	}

	@Override
	org.objectweb.asm.MethodVisitor visitMethod(int access, String name, String descriptor, String signature, String[] exceptions) {
		if (name == methodName && descriptor == methodDescriptor) {
			return null
		}
		return super.visitMethod(access, name, descriptor, signature, exceptions)
	}
}

def geckolibMojmapJar = { ->
	String[] coordinate = project.geckolib_version.split(':')
	String group = coordinate[0]
	String name = coordinate[1]
	String version = coordinate[2]
	File cacheDir = new File(project.projectDir, '.gradle/geckolib-mojmap')
	File raw = new File(cacheDir, "${name}-${version}.jar")
	File out = new File(cacheDir, "${name}-${version}-mojmap-r1.jar")
	if (out.isFile() && out.length() > 0) {
		return out
	}
	cacheDir.mkdirs()
	if (!raw.isFile() || raw.length() == 0) {
		File moduleCacheDir = new File(project.gradle.gradleUserHomeDir, "caches/modules-2/files-2.1/${group}/${name}/${version}")
		File cached = moduleCacheDir.isDirectory()
				? moduleCacheDir.listFiles().collect { new File(it, raw.name) }.find { it.isFile() && it.length() > 0 }
				: null
		if (cached != null) {
			java.nio.file.Files.copy(cached.toPath(), raw.toPath(), java.nio.file.StandardCopyOption.REPLACE_EXISTING)
		} else {
			String url = "https://api.modrinth.com/maven/${group.replace('.', '/')}/${name}/${version}/${raw.name}"
			logger.lifecycle("Ore Lizards: downloading ${url}")
			raw.bytes = new URI(url).toURL().bytes
		}
	}
	String conflictingClass = 'software/bernie/geckolib3/renderer/geo/GeoProjectilesRenderer.class'
	String conflictingMethod = 'method_3931'
	String conflictingDescriptor = '(Lnet/minecraft/class_1297;)Lnet/minecraft/class_2960;'
	File tmp = new File(out.parentFile, out.name + '.tmp')
	new java.util.zip.ZipFile(raw).withCloseable { zip ->
		new java.util.zip.ZipOutputStream(new FileOutputStream(tmp)).withCloseable { zos ->
			for (java.util.zip.ZipEntry entry : zip.entries()) {
				// A modified class would fail any jar signature check, so signature files can't be kept.
				if (entry.name ==~ /META-INF\/[^\/]+\.(SF|RSA|DSA|EC)/) {
					continue
				}
				byte[] data = zip.getInputStream(entry).bytes
				if (entry.name == conflictingClass) {
					def reader = new org.objectweb.asm.ClassReader(data)
					def writer = new org.objectweb.asm.ClassWriter(reader, 0)
					reader.accept(new DropMethodVisitor(writer, conflictingMethod, conflictingDescriptor), 0)
					data = writer.toByteArray()
				}
				zos.putNextEntry(new java.util.zip.ZipEntry(entry.name))
				zos.write(data)
				zos.closeEntry()
			}
		}
	}
	java.nio.file.Files.move(tmp.toPath(), out.toPath(), java.nio.file.StandardCopyOption.REPLACE_EXISTING)
	return out
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// GeckoLib - animation library for the buried/erupt/flee/dig-down state machine. Resolved from
	// the coordinate in gradle.properties, then patched for Mojang mappings - see geckolibMojmapJar.
	modImplementation files(geckolibMojmapJar())

	// GeckoLib 3.0.107 shades mclib into software.bernie.shadowed.eliotlash.mclib and, unlike the 4.x
	// line, nests no jar-in-jar copy of it at all (META-INF/jars is absent), so the libs/mclib-20.jar
	// workaround the 1.20.1 build needs does not apply here.
}

processResources {
	inputs.property 'version', project.version

	filesMatching('fabric.mod.json') {
		expand 'version': project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 8
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_1_8
	targetCompatibility = JavaVersion.VERSION_1_8
}

// Created by withSourcesJar() above, so it can only be configured after that call.
sourcesJar {
	from sourceSets.client.allSource
}
